Adapt zmodem protocol to transfer a file
- Add new commands; sz and rz
- Add zmodem folder and library
- Add function; SzOutput(), SzSend(), RxReceive()
- Add uart_mutex between InputHandler() and SzSend(), RxReceive()
- Fix tokenID to include '_' or '.' for filename

--- a/zmodem/Makefile
+++ b/zmodem/Makefile
@@ -1,6 +1,5 @@
-# $Id$
-# 
 # Makefile
+# 
 
 #--------------------------------------------------
 # Variables
@@ -8,7 +7,8 @@
 UNAME		:= $(shell uname -s)
 ARCH		:= $(shell uname -m)
 
-TARGET		= cmd_parser
+TARGET_SZ	= sz
+TARGET_RZ	= rz
 
 OBJDIR 		= obj
 
@@ -21,22 +21,52 @@ CP		= /bin/cp -fp
 RM		= /bin/rm -f
 
 # C or assembly sources which are archived in the library
-C_SRCS		= 
-C_SRCS		+= getch.c
-C_SRCS		+= msg_queue.c
-C_SRCS		+= cmd_lexan.c
-C_SRCS		+= channel_db.c
-C_SRCS		+= cmd_operation.c
-C_SRCS		+= cmd_parser.c
-C_SRCS		+= io_handler.c
-C_SRCS		+= main.c
-A_SRCS		= 
-SRCS		= $(C_SRCS) $(A_SRCS)
+C_SRCS_SZ	= 
+#C_SRCS_SZ	+= uart.c
+C_SRCS_SZ	+= zm.c
+C_SRCS_SZ	+= rbsb.c
+C_SRCS_SZ	+= rzsz.c
+C_SRCS_SZ	+= sz.c
+C_SRCS_SZ	+= sz_main.c
+A_SRCS_SZ	= 
+SRCS_SZ		= $(C_SRCS_SZ) $(A_SRCS_SZ)
 
 # Ojbect files
-C_OBJS		= $(C_SRCS:%.c=$(OBJDIR)/%.o)
-A_OBJS		= $(A_SRCS:%.S=$(OBJDIR)/%.o)
-OBJS		= $(C_OBJS) $(A_OBJS)
+C_OBJS_SZ	= $(C_SRCS_SZ:%.c=$(OBJDIR)/%.o)
+A_OBJS_SZ	= $(A_SRCS_SZ:%.S=$(OBJDIR)/%.o)
+OBJS_SZ		= $(C_OBJS_SZ) $(A_OBJS_SZ)
+
+# C or assembly sources which are archived in the library
+C_SRCS_RZ	= 
+#C_SRCS_RZ	+= uart.c
+C_SRCS_RZ	+= zm.c
+C_SRCS_RZ	+= rbsb.c
+C_SRCS_RZ	+= rzsz.c
+C_SRCS_RZ	+= rz.c
+C_SRCS_RZ	+= rz_main.c
+A_SRCS_RZ	= 
+SRCS_RZ		= $(C_SRCS_RZ) $(A_SRCS_RZ)
+
+# Ojbect files
+C_OBJS_RZ	= $(C_SRCS_RZ:%.c=$(OBJDIR)/%.o)
+A_OBJS_RZ	= $(A_SRCS_RZ:%.S=$(OBJDIR)/%.o)
+OBJS_RZ		= $(C_OBJS_RZ) $(A_OBJS_RZ)
+
+# C or assembly sources which are archived in the library
+C_SRCS_ZM	= 
+#C_SRCS_ZM	+= uart.c
+C_SRCS_ZM	+= zm.c
+C_SRCS_ZM	+= rbsb.c
+C_SRCS_ZM	+= rzsz.c
+C_SRCS_ZM	+= sz.c
+C_SRCS_ZM	+= rz.c
+A_SRCS_ZM	= 
+SRCS_ZM		= $(C_SRCS_ZM) $(A_SRCS_ZM)
+
+# Ojbect files
+C_OBJS_ZM	= $(C_SRCS_ZM:%.c=$(OBJDIR)/%.o)
+A_OBJS_ZM	= $(A_SRCS_ZM:%.S=$(OBJDIR)/%.o)
+OBJS_ZM		= $(C_OBJS_ZM) $(A_OBJS_ZM)
 
 # Compile flags
 C_FLAGS		=
@@ -52,9 +82,9 @@ C_FLAGS		+= -g
 
 # Include paths
 INC_PATH	=
-INC_PATH	+= -I/usr/local/include
 INC_PATH	+= -I.
-INC_PATH	+= -I./zmodem
+#INC_PATH	+= -I/usr/include/
+#INC_PATH	+= -I/usr/include/linux
 
 DEFS		= $(GLOBAL_DEFS)
 #DEFS		+= -D_PRINT_MSG
@@ -70,24 +100,31 @@ endif
 
 LD_PATH		= 
 LD_PATH		+= -L/usr/local/lib
-LD_PATH		+= -L./zmodem
 
 LD_LIBS		=
- LD_LIBS	+= -lzmodem
  LD_LIBS	+= -lwiringPi -lwiringPiDev
- LD_LIBS	+= -lpthread
+#LD_LIBS	+= -lpthread
 #LD_LIBS	+= -lm
 
 #--------------------------------------------------
 # Rules
 #--------------------------------------------------
 
-all: obj tags $(TARGET)
+all: obj tags $(TARGET_SZ) $(TARGET_RZ)
 
-$(TARGET): $(OBJS)
-	$(LD) $(LD_FLAGS) -o $@ $(OBJS) $(LD_PATH) $(LD_LIBS)
-#	$(AR) cru $@ $(OBJS)
+$(TARGET_SZ): $(OBJS_SZ)
+	$(LD) $(LD_FLAGS) -o $@ $(OBJS_SZ) $(LD_LIBS)
+#	$(AR) cru $@ $(OBJS_SZ)
 #	$(RANLIB) $@
+
+$(TARGET_RZ): $(OBJS_RZ)
+	$(LD) $(LD_FLAGS) -o $@ $(OBJS_RZ) $(LD_LIBS)
+#	$(AR) cru $@ $(OBJS_RZ)
+#	$(RANLIB) $@
+
+libzmodem.a: $(OBJS_ZM)
+	$(AR) cru $@ $(OBJS_ZM)
+	$(RANLIB) $@
 
 clean:
 	@echo ">>> Cleaning cmd_parser ..."
@@ -108,9 +145,9 @@ $(OBJDIR)/%.o: %.S
 $(OBJDIR)/%.o: %.c
 	$(COMPILE) -c -o $@ $<
 
-tags: *.h ${SRCS}
+tags: *.h ${SRCS_SZ} ${SRCS_RZ}
 	@echo Updating tag table...
-	@ctags ${SRCS} *.h
+	@ctags ${SRCS_SZ} ${SRCS_RZ} *.h
 
 $(OBJDIR):
 	mkdir $@
@@ -118,7 +155,7 @@ $(OBJDIR):
 #--------------------------------------------------
 # Make Dependency List
 #--------------------------------------------------
-MAKE_DEPEND	= makedepend $(DEFS) $(INC_PATH) $(SRCS)
+MAKE_DEPEND	= makedepend $(DEFS) $(INC_PATH) $(SRCS_SZ) $(SRCS_RZ)
 
 .depend: $(OBJDIR) Makefile
 	@$(MAKE_DEPEND) -f- -p$(OBJDIR)/ > $@  
